--- a/app/src/main/res/layout/fragment_wellcome.xml
+++ b/app/src/main/res/layout/fragment_wellcome.xml
@@ -1,6 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,25 +6,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="apuri.com.br.ureblockingme.MainActivity"
-    tools:showIn="@layout/activity_main">
+    tools:context="apuri.com.br.ureblockingme.WellcomeActivity$PlaceholderFragment">
 
-    <EditText
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/txtLicensePlate"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:text="@string/txt_wellcome"
+        android:id="@+id/lb_wellcome"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:hint="@string/hint_blocking_license_plate"/>
+        android:layout_centerHorizontal="true" />
 
-    <Button
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/txt_bt_warn"
-        android:textColor="@android:color/white"
-        android:id="@+id/btWarn"
-        android:backgroundTint="#FFCC00"
-        android:layout_below="@+id/txtLicensePlate"
+        android:text="@string/txt_lets_begin"
+        android:gravity="center"
+        android:id="@+id/lb_lets_begin"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
