--- a/app/src/main/res/layout/fragment_user_login.xml
+++ b/app/src/main/res/layout/fragment_user_login.xml
@@ -13,20 +13,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:text="@string/txt_signup"
-        android:id="@+id/lb_signup"
+        android:text="@string/txt_identification"
+        android:id="@+id/lb_identification"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/txt_name_and_license_plate"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:id="@+id/lb_name_and_license_plate"
-        android:layout_below="@+id/lb_signup"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="24dp" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -34,9 +24,33 @@
         android:inputType="textPersonName"
         android:hint="@string/hint_user_name"
         android:ems="10"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:id="@+id/txtUserName"
-        android:layout_below="@+id/lb_name_and_license_plate"
+        android:layout_below="@+id/lb_identification"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:hint="@string/hint_email_address"
+        android:ems="10"
+        android:id="@+id/txtEmail"
+        android:layout_marginTop="8dp"
+        android:layout_below="@+id/txtUserName"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:hint="@string/hint_password"
+        android:ems="10"
+        android:id="@+id/txtPassword"
+        android:layout_marginTop="8dp"
+        android:layout_below="@+id/txtEmail"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
@@ -48,7 +62,7 @@
         android:ems="10"
         android:id="@+id/txtLicensePlate"
         android:layout_marginTop="8dp"
-        android:layout_below="@+id/txtUserName"
+        android:layout_below="@+id/txtPassword"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
 
@@ -56,7 +70,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/txt_continue"
-        android:id="@+id/button"
+        android:enabled="false"
+        android:id="@+id/btContinue"
+        android:layout_below="@+id/txtLicensePlate"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
